--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "kartik-v/yii2-grid": "~2.9",
         "kartik-v/yii2-krajee-base": "@dev",
         "kartik-v/yii2-tabs-x": "~1.1",
-        "nirvana-msu/yii2-showloading": "1.0.*@dev"
+        "nirvana-msu/yii2-showloading": "1.0.*@dev",
+        "schmunk42/yii2-giiant": "*",
+        "kartik-v/yii2-mpdf": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
